--- a/style.css
+++ b/style.css
@@ -84,6 +84,15 @@ ul{
     opacity: 0.9;
 }
 
+.menu-btn {
+    cursor: pointer;
+    position: absolute;
+    top: 20px;
+    right: 30px;
+    z-index: 2;
+    display: none;
+  }
+
 .showcase {
     width: 100%;
     height: 500px;
@@ -127,6 +136,8 @@ ul{
     grid-gap: 20px;
     margin-bottom: 70px;
 }
+
+
 
 .home-cards img{
     width: 100%;
@@ -289,4 +300,98 @@ a{
 .footer-inner ul li{
     margin-right: 30px;
   
+}
+
+@media(max-width: 800px) {
+    .menu-btn {
+        display: block;
+      }
+    .home-cards{
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .xbox .content p {
+        display: none;
+    }
+    
+    .xbox .content h2 {
+        margin-bottom: 40px;
+    }
+    .covid .content h1{
+        font-size: 25px;
+    }
+    .covid .content{
+        padding: 20px;
+    }
+    .services{
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .links-inner{
+        flex-direction: column;
+        
+        align-items: flex-start;
+    }
+    .links-inner li h3{
+        margin-top: 25px;
+    }
+    .footer-inner{
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .footer-inner div{
+        margin-bottom: 20px;
+    }
+    .services .service{
+        display: flex;
+        width:100%;
+        margin: 20px;
+    }
+    .services .service p{
+        
+        margin-left: 30px;
+    }
+    
+
+}
+@media(max-width: 700px){
+.main-nav ul.main-menu {
+    display: block;
+    position: absolute;
+    top:0;
+    left: 0;
+    background: #f2f2f2;
+    width: 50%;
+    height: 100%;
+    border-right: #ccc 1px solid;
+    opacity: 0.9;
+    padding: 30px;
+    transform: translateX(-700px);
+    transition: transform 0.5s ease-in-out;
+    
+  }
+  .main-nav ul.main-menu.show {
+    transform: translateX(-20px);
+  }
+
+  .menu-btn:hover {
+    opacity: 0.5;
+  }
+
+  .main-nav ul.right-menu {
+    margin-right: 50px;
+  }
+  .main-nav ul.main-menu li {
+    padding: 10px;
+    border-bottom: #ccc solid 1px;
+    font-size: 14px;
+  }
+  .main-nav ul.main-menu li:last-child{
+      border-bottom: 0;
+  }
+}
+
+@media(max-width: 500px) {
+    .home-cards {
+      grid-template-columns: 1fr;
+    }
 }
